--- a/.classpath
+++ b/.classpath
@@ -25,7 +25,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Java8/jre/lib/ojdbc6.jar">
+	<classpathentry kind="lib" path="C:/app/Gahyun/product/11.2.0/dbhome_1/jdbc/lib/ojdbc6.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
