--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -49,7 +49,7 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<!-- 에러 발생 시 보여주고자 하는 파일 설정(게시판이 다 작성되고 난 후 주석 해제한다.) -->
-	<error-page>
+	<!-- <error-page>
 		<error-code>403</error-code>
 		<location>/common/error/error.html</location>
 	</error-page>
@@ -64,5 +64,5 @@
 	<error-page>
 		<derror-code>500</derror-code>
 		<location>/common/error/error.html</location>
-	</error-page>
+	</error-page> -->
 </web-app>
